Continue reservation bug squash

--- a/frontend/src/components/Modal/AvailabilityModal.css
+++ b/frontend/src/components/Modal/AvailabilityModal.css
@@ -23,10 +23,6 @@
     margin-bottom: 16px;
 }
 
-.reservation-button:disabled {
-    background-color: #2480c4;
-}
-
 .availability-form {
     margin-top: 2rem;
 }
